[gd_scene load_steps=6 format=3 uid="uid://btmnhd6lojhqw"]

[ext_resource type="Script" path="res://intro_scene.gd" id="1_pcefe"]

[sub_resource type="Curve" id="Curve_5t4et"]

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_6oeyh"]
curve_x = SubResource("Curve_5t4et")

[sub_resource type="LabelSettings" id="LabelSettings_wj2vq"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_cchju"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pcefe")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -10.0
offset_top = -14.0
offset_right = 1176.0
offset_bottom = 680.0
texture = SubResource("CurveXYZTexture_6oeyh")

[node name="HSlider" type="HSlider" parent="."]
offset_left = 216.0
offset_top = 539.0
offset_right = 861.0
offset_bottom = 574.0
max_value = 50.0
value = 20.0
tick_count = 6

[node name="slidername" type="Label" parent="."]
offset_left = 874.0
offset_top = 545.0
offset_right = 934.0
offset_bottom = 570.0
text = "20/50
"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1149.0
offset_bottom = 190.0
alignment = 1

[node name="title_text" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Hackbots operator trainer"
label_settings = SubResource("LabelSettings_wj2vq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 345.0
offset_top = 250.0
offset_right = 815.0
offset_bottom = 488.0

[node name="start_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="controller_connect_text" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Unknown controller status"
label_settings = SubResource("LabelSettings_cchju")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "When the text for an action shows, 
hit the correct button for that action on the controller, 
as fast as possible"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_top = 570.0
offset_right = 1150.0
offset_bottom = 610.0
alignment = 1

[node name="player_name_label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Players Name:"

[node name="player_name_input" type="LineEdit" parent="HBoxContainer2"]
layout_mode = 2
text = "Hackbot"
placeholder_text = "Hackbot"
expand_to_text_length = true

[node name="file_name_label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Output File Name: (stored in %appdata%/hackbots-trainer)"

[node name="file_name_input" type="LineEdit" parent="HBoxContainer2"]
layout_mode = 2
text = "last"
placeholder_text = "last"
expand_to_text_length = true

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 798.0
offset_top = 501.0
offset_right = 931.0
offset_bottom = 528.0

[node name="actions_label" type="Label" parent="."]
offset_left = 669.0
offset_top = 502.0
offset_right = 778.0
offset_bottom = 525.0
text = "Actions config:"

[node name="vibration_label" type="Label" parent="."]
offset_left = 304.0
offset_top = 501.0
offset_right = 384.0
offset_bottom = 524.0
text = "Vibration: "

[node name="vibration_check" type="CheckBox" parent="."]
offset_left = 390.0
offset_top = 502.0
offset_right = 414.0
offset_bottom = 526.0

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/start_button" to="." method="_start_button_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="vibration_check" to="." method="_on_vibration_check_pressed"]
